# python-dict2xml

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  build_test.py  dict2xml.py  format  lint  pylama.ini  pyproject.toml  readme.markdown  readme.rst  run.sh  setup.py  test.sh  tox.ini
.github/workflows/: ci.yml  lint.yml  release.yml
dict2xml/: __init__.py  logic.py  version.py
specs/: build_test.py  converter_test.py  node_test.py
specs/examples/: xml_result.py
test_examples/: python_dict.py
tests/: build_test.py  converter_test.py  node_test.py
tests/examples/: python_dict.json  python_dict.py  result.xml  xml_result.py
tools/: .gitignore  black  devtools.py  isort  pylama  requirements.dev.txt  venv
