[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dict2xml"
dynamic = ["version"]
description = "Small utility to convert a python dictionary into an XML string"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.5"
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]

[project.optional-dependencies]
tests = [
    "noseOfYeti[black]==2.4.9",
    "pytest==8.3.2",
]

[project.urls]
Homepage = "http://github.com/delfick/python-dict2xml"

[tool.hatch.version]
path = "dict2xml/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/dict2xml",
    "/README.rst",
    "/LICENSE",
    "/test.sh",
    "/run.sh",
    "/pytest.ini",
    "/tests/**",
    "/tools/bootstrap_venvstarter.py",
    "/tools/requirements.dev.txt",
    "/tools/devtools.py",
    "/tools/venv"
]
exclude = ["*.pyc"]

[tool.hatch.build]
include = ["/dict2xml"]

[tool.black]
line-length = 100
include = '\.py$'
exclude = '''
/(
     \.git
   | \.tox
   | dist
   | tools
)/
'''

[tool.isort]
profile = "black"
skip_glob = [
   ".git/*",
   ".tox/*",
   "dist/*",
   "tools/.*",
]
